# AU342-Chinese-Checker

./: .gitignore  README.md  UI.py  agent.py  board.py  game.py  requirement.txt  runGame.py  util.py
plugin/: CMakeLists.txt  chess.cpp  chess.hpp  main.cpp  plugin.cpp
plugin/thread_pools/includes/: static_pool.hpp
